--- a/scss/_utilities.scss
+++ b/scss/_utilities.scss
@@ -1,1 +1,7 @@
 // Para botões, estruturas flex versáteis e cenas do género transversais a todo o website
+
+.wrapper{
+    // max-width: 1280px;
+    margin:0 auto;
+    height: 100%;
+}
