Add gift sass Sof

--- a/scss/_utilities.scss
+++ b/scss/_utilities.scss
@@ -1,5 +1,13 @@
 // Para botões, estruturas flex versáteis e cenas do género transversais a todo o website
 
+body{
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+section {
+    padding:0 2%;
+}
+
 .wrapper{
     // max-width: 1280px;
     margin:0 auto;
