--- a/style/css/main.css
+++ b/style/css/main.css
@@ -55,6 +55,32 @@ html, body {
   position: relative;
   height: 100%; }
 
+body {
+  font-family: Arial, Helvetica, sans-serif; }
+
+section {
+  padding: 0 2%; }
+
 .wrapper {
   margin: 0 auto;
   height: 100%; }
+
+.premios {
+  text-align: center; }
+  .premios .wrapper h2 {
+    font-size: 25px;
+    text-transform: uppercase;
+    margin-bottom: 10px; }
+  .premios .wrapper h3 {
+    font-size: 20px;
+    font-weight: 550;
+    text-transform: uppercase;
+    margin-bottom: 50px; }
+    .premios .wrapper h3 span {
+      font-size: 40px; }
+  .premios .wrapper .flex-container {
+    display: flex;
+    justify-content: space-around;
+    margin-bottom: 100px; }
+    .premios .wrapper .flex-container img {
+      width: 250px; }
