--- a/style/css/main.css
+++ b/style/css/main.css
@@ -66,7 +66,8 @@ section {
   height: 100%; }
 
 .premios {
-  text-align: center; }
+  text-align: center;
+  margin-bottom: 100px; }
   .premios .wrapper h2 {
     font-size: 25px;
     text-transform: uppercase;
@@ -80,7 +81,30 @@ section {
       font-size: 40px; }
   .premios .wrapper .flex-container {
     display: flex;
-    justify-content: space-around;
-    margin-bottom: 100px; }
+    justify-content: space-around; }
     .premios .wrapper .flex-container img {
       width: 250px; }
+
+.regras {
+  text-align: center;
+  margin-bottom: 100px; }
+  .regras .wrapper h3 {
+    font-size: 25px;
+    text-transform: uppercase;
+    margin-bottom: 30px; }
+  .regras .wrapper ul li {
+    margin-bottom: 10px; }
+    .regras .wrapper ul li span {
+      vertical-align: middle;
+      font-size: 30px;
+      font-weight: 700; }
+
+footer {
+  height: 50px;
+  background-color: black;
+  text-align: center; }
+  footer p {
+    color: white;
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%); }
