Update gift Sof

--- a/scss/_gifts.scss
+++ b/scss/_gifts.scss
@@ -19,8 +19,10 @@
         .flex-container{
             display: flex;
             justify-content: space-around;
+            flex-wrap: wrap;
             img{
                 width: 250px;
+                margin-top: 20px;
             }
         }
     }
