--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,7 +1,8 @@
 @import 'reset'; 
 @import 'variables';
 @import 'utilities';
-
+@import 'header';
+@import 'hero';
 @import 'gifts';
 @import 'rules';
 @import 'footer';
