--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -1,6 +1,8 @@
 header {
     nav {
         background-color: black;
+        width: 100%;
+        position: fixed;
         div.logo {
             display: flex;
             align-items: center;
