--- a/style/css/main.css
+++ b/style/css/main.css
@@ -1,1 +1,138 @@
-html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video{margin:0;padding:0;border:0;font-size:100%;font:inherit;vertical-align:baseline}article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block}body{line-height:1}ol,ul{list-style:none}blockquote,q{quotes:none}blockquote:before,blockquote:after,q:before,q:after{content:'';content:none}table{border-collapse:collapse;border-spacing:0}*{box-sizing:border-box}a{text-decoration:none}html,body{position:relative;height:100%}body{font-family:Arial, Helvetica, sans-serif}section{padding:0 2%}.wrapper{margin:0 auto;height:100%}header nav{background-color:black}header nav div.logo{display:flex;align-items:center;justify-content:center}header nav div.logo img{height:10vh}.hero .wrapper form{height:90vh;display:flex;align-items:center;justify-content:center;flex-direction:column}.hero .wrapper form label{font-size:30px;font-weight:600;margin:6px;height:25px}.hero .wrapper form input{margin:10px;height:25px}.premios{text-align:center;margin-bottom:100px}.premios .wrapper h2{font-size:25px;text-transform:uppercase;margin-bottom:10px}.premios .wrapper h3{font-size:20px;font-weight:550;text-transform:uppercase;margin-bottom:50px}.premios .wrapper h3 span{font-size:40px}.premios .wrapper .flex-container{display:flex;justify-content:space-around;flex-wrap:wrap}.premios .wrapper .flex-container img{width:250px;margin-top:20px}.regras{text-align:center;margin-bottom:100px}.regras .wrapper h3{font-size:25px;text-transform:uppercase;margin-bottom:30px}.regras .wrapper ul li{margin-bottom:10px}.regras .wrapper ul li span{vertical-align:middle;font-size:30px;font-weight:700}footer{height:50px;background-color:black;text-align:center}footer p{color:white;position:relative;top:50%;transform:translateY(-50%)}
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline; }
+
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
+  display: block; }
+
+body {
+  line-height: 1; }
+
+ol, ul {
+  list-style: none; }
+
+blockquote, q {
+  quotes: none; }
+
+blockquote:before, blockquote:after,
+q:before, q:after {
+  content: '';
+  content: none; }
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0; }
+
+* {
+  box-sizing: border-box; }
+
+a {
+  text-decoration: none; }
+
+html, body {
+  position: relative;
+  height: 100%; }
+
+body {
+  font-family: Arial, Helvetica, sans-serif; }
+
+section {
+  padding: 0 2%; }
+
+.wrapper {
+  margin: 0 auto;
+  height: 100%; }
+
+header nav {
+  background-color: black;
+  width: 100%;
+  position: fixed; }
+  header nav div.logo {
+    display: flex;
+    align-items: center;
+    justify-content: center; }
+    header nav div.logo img {
+      height: 10vh; }
+
+.hero .wrapper form {
+  height: 90vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column; }
+  .hero .wrapper form label {
+    font-size: 30px;
+    font-weight: 600;
+    margin: 6px;
+    height: 25px; }
+  .hero .wrapper form input {
+    margin: 10px;
+    height: 25px; }
+
+.premios {
+  text-align: center;
+  margin-bottom: 100px; }
+  .premios .wrapper h2 {
+    font-size: 25px;
+    text-transform: uppercase;
+    margin-bottom: 10px; }
+  .premios .wrapper h3 {
+    font-size: 20px;
+    font-weight: 550;
+    text-transform: uppercase;
+    margin-bottom: 50px; }
+    .premios .wrapper h3 span {
+      font-size: 40px; }
+  .premios .wrapper .flex-container {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap; }
+    .premios .wrapper .flex-container img {
+      width: 250px;
+      margin-top: 20px; }
+
+.regras {
+  text-align: center;
+  margin-bottom: 100px; }
+  .regras .wrapper h3 {
+    font-size: 25px;
+    text-transform: uppercase;
+    margin-bottom: 30px; }
+  .regras .wrapper ul li {
+    margin-bottom: 10px; }
+    .regras .wrapper ul li span {
+      vertical-align: middle;
+      font-size: 30px;
+      font-weight: 700; }
+
+footer {
+  height: 50px;
+  background-color: black;
+  text-align: center; }
+  footer p {
+    color: white;
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%); }
