--- a/style/css/main.css
+++ b/style/css/main.css
@@ -56,7 +56,7 @@ html, body {
   height: 100%; }
 
 body {
-  font-family: Arial, Helvetica, sans-serif; }
+  font-family: 'Azo Sans Lt', Arial, Helvetica, sans-serif; }
 
 section {
   padding: 0 2%; }
