Add font Azo Sans Sof

--- a/scss/_utilities.scss
+++ b/scss/_utilities.scss
@@ -1,7 +1,7 @@
 // Para botões, estruturas flex versáteis e cenas do género transversais a todo o website
 
 body{
-    font-family: 'Azo Sans Lt', Arial, Helvetica, sans-serif;
+    font-family: 'Azo Sans Lt';
 }
 
 section {
