Update Azo Sans Sof

--- a/style/css/main.css
+++ b/style/css/main.css
@@ -56,7 +56,7 @@ html, body {
   height: 100%; }
 
 body {
-  font-family: 'Azo Sans Lt'; }
+  font-family: 'Azo Sans'; }
 
 section {
   padding: 0 2%; }
