Add & style about Sof

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,7 +1,5 @@
 // colors
-$primary-color: #000000; //exemplo
-$secondary-color: #000000; //exemplo
-
-
-// fonts
-$poppins: 'Poppins', sans-serif; //exemplo
+$light-blue: #4AACE4;
+$white: #ffffff; 
+$dark-blue: #1D1C51;
+$medium-blue: #222C6E;
