--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -2,6 +2,8 @@ footer{
     height: 50px;
     background-color: black;
     text-align: center;
+    position: relative;
+    bottom: -22px;
     p{
         color: white;
         position: relative;
