--- a/scss/_hero.scss
+++ b/scss/_hero.scss
@@ -1,20 +1,59 @@
-.hero{
-    .wrapper{
-        form{
-            height:100vh;
-            display:flex;
-            align-items:center;
-            justify-content:center;
-            flex-direction:column;
-            label{
-                font-size:30px;
-                font-weight:600;
-                margin:6px;
-                height:25px;
+.hero {
+    .wrapper {
+        height: 100vh;
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        justify-content: center;
+        h3 {
+            font-size: 30px;
+            margin: 30px;
+        }
+        ul {
+            font-size: 20px;
+            li {
+                display: flex;
+                align-items: center;
+                margin: 5px;
+                position:relative;
+                span {
+                    font-size: 100px;
+                    font-weight: 700;
+                    margin-right: 50px;
+                }
             }
-            input{
-                margin:10px;
-                height:25px;
+            .square{
+                height:70px;
+                width:70px;
+                background-color:cornflowerblue;
+                transform:rotate(45deg);
+                position:absolute;
+                z-index:-1;
+                border-radius:10px;
+            }
+        }
+        form {
+            text-align: center;
+            label {
+                margin-bottom: 30px;
+                display: block;
+                font-size: 22px;
+            }
+            input {
+                height: 95px;
+                border-radius: 10px;
+                display: inline-block;
+            }
+            input#code {
+                width: 490px;
+                text-align: center;
+                font-size: 60px;
+                font-family: $poppins;
+            }
+            input.btn {
+                width: 110px;
+                font-family: $poppins;
+                font-size: 60px;
             }
         }
     }
