--- a/scss/_about.scss
+++ b/scss/_about.scss
@@ -1,7 +1,7 @@
 .about{
     text-align: center;
     width: 100%;
-    background-image: url('/img/bg-home.JPG');
+    background-image: url('/img/bg-home.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     height: 2869px;
