--- a/style/css/main.css
+++ b/style/css/main.css
@@ -130,7 +130,7 @@ header nav {
 .about {
   text-align: center;
   width: 100%;
-  background-image: url("/img/bg-home.JPG");
+  background-image: url("/img/bg-home.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   height: 2869px; }
