--- a/style/css/main.css
+++ b/style/css/main.css
@@ -65,6 +65,12 @@ section {
   margin: 0 auto;
   height: 100%; }
 
+.flex-container {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-wrap: wrap; }
+
 header nav {
   background-color: black;
   width: 100%;
@@ -188,23 +194,24 @@ header nav {
       .about .wrapper .flex-container.rev {
         flex-direction: row-reverse; }
     .about .wrapper .btn-default {
-      padding: 20px 100px;
-      background-color: red;
-      font-size: 25px;
-      font-weight: 600;
+      padding: 25px 135px;
+      display: inline-block;
+      font-size: 30px;
       letter-spacing: 3px;
-      color: white;
-      border-radius: 20px;
-      background-color: #555555; }
+      color: #1D1C51;
+      background-color: #ffffff;
+      border-radius: 30px;
+      margin-top: 220px; }
 
 footer {
-  height: 50px;
-  background-color: black;
-  text-align: center;
+  height: 167px;
+  background-color: #222C6E;
+  color: #ffffff;
   position: relative;
-  bottom: -22px; }
-  footer p {
-    color: white;
-    position: relative;
-    top: 50%;
-    transform: translateY(-50%); }
+  bottom: 100px; }
+  footer .flex-container {
+    height: 100%; }
+    footer .flex-container div ul {
+      margin-bottom: 35px; }
+      footer .flex-container div ul li {
+        margin-bottom: 10px; }
