--- a/style/css/main.css
+++ b/style/css/main.css
@@ -55,6 +55,7 @@ html, body {
   position: relative;
   height: 100%; }
 
+/* Break Points */
 body {
   font-family: 'Azo Sans'; }
 
@@ -140,8 +141,17 @@ header nav {
   background-repeat: no-repeat;
   background-size: cover;
   height: 2869px; }
+  @media (min-width: 0) and (max-width: 512px) {
+    .about {
+      background: red;
+      width: 100%;
+      overflow: hidden;
+      height: 2500px; } }
   .about .wrapper {
     max-width: 1280px; }
+    @media (min-width: 0) and (max-width: 512px) {
+      .about .wrapper {
+        max-width: 340px !important; } }
     .about .wrapper h2 {
       font-size: 110px;
       font-weight: 700;
@@ -149,6 +159,12 @@ header nav {
       margin-bottom: 22px;
       line-height: 132px;
       padding-top: 253px; }
+      @media (min-width: 0) and (max-width: 512px) {
+        .about .wrapper h2 {
+          font-size: 45px;
+          margin-bottom: 30px;
+          padding-top: 100px;
+          line-height: 55px; } }
     .about .wrapper p {
       font-size: 20px;
       color: #ffffff;
@@ -158,12 +174,22 @@ header nav {
       left: 50%;
       transform: translateX(-50%);
       line-height: 27.24px; }
+      @media (min-width: 0) and (max-width: 512px) {
+        .about .wrapper p {
+          font-size: 21px;
+          width: 100%;
+          line-height: 25px;
+          margin-bottom: 100px; } }
     .about .wrapper .flex-container {
       margin-top: 180px;
       display: flex;
       justify-content: space-around;
       align-items: center;
       flex-wrap: wrap; }
+      @media (min-width: 0) and (max-width: 512px) {
+        .about .wrapper .flex-container {
+          background: red;
+          margin-top: 60px; } }
       .about .wrapper .flex-container .shape {
         height: 450px;
         width: 450px;
@@ -172,12 +198,24 @@ header nav {
         transform: rotate(45deg);
         position: relative;
         border-radius: 30px; }
+        @media (min-width: 0) and (max-width: 512px) {
+          .about .wrapper .flex-container .shape {
+            border-radius: 20px;
+            height: 250px;
+            width: 250px;
+            min-width: 250px;
+            margin-bottom: 100px; } }
         .about .wrapper .flex-container .shape img {
           transform: rotate(-45deg);
           height: 1050px;
           position: absolute;
           bottom: -250px;
           right: -30px; }
+          @media (min-width: 0) and (max-width: 512px) {
+            .about .wrapper .flex-container .shape img {
+              height: 600px;
+              bottom: -170px;
+              right: -50px; } }
       .about .wrapper .flex-container .info {
         max-width: 430px; }
         .about .wrapper .flex-container .info h3 {
@@ -185,12 +223,26 @@ header nav {
           margin-bottom: 22px;
           color: #ffffff;
           line-height: 96px; }
+          @media (min-width: 0) and (max-width: 512px) {
+            .about .wrapper .flex-container .info h3 {
+              font-size: 40px;
+              margin-bottom: 30px;
+              line-height: 0px; } }
         .about .wrapper .flex-container .info p {
           width: 426px;
           font-size: 25px;
           line-height: 30px; }
+          @media (min-width: 0) and (max-width: 512px) {
+            .about .wrapper .flex-container .info p {
+              font-size: 18px;
+              margin-bottom: 80px;
+              line-height: 20px;
+              width: 300px; } }
       .about .wrapper .flex-container.frst {
         margin-top: 200px; }
+        @media (min-width: 0) and (max-width: 512px) {
+          .about .wrapper .flex-container.frst {
+            margin-top: 120px; } }
       .about .wrapper .flex-container.rev {
         flex-direction: row-reverse; }
     .about .wrapper .btn-default {
@@ -202,16 +254,30 @@ header nav {
       background-color: #ffffff;
       border-radius: 30px;
       margin-top: 220px; }
+      @media (min-width: 0) and (max-width: 512px) {
+        .about .wrapper .btn-default {
+          padding: 20px 50px;
+          font-size: 25px;
+          letter-spacing: 3px;
+          border-radius: 20px;
+          margin-top: 10px; } }
 
 footer {
   height: 167px;
   background-color: #222C6E;
   color: #ffffff;
   position: relative;
-  bottom: 100px; }
-  footer .flex-container {
-    height: 100%; }
-    footer .flex-container div ul {
-      margin-bottom: 35px; }
-      footer .flex-container div ul li {
-        margin-bottom: 10px; }
+  bottom: 100px;
+  text-align: left; }
+  @media (min-width: 0) and (max-width: 512px) {
+    footer {
+      height: 200px;
+      width: 100%; } }
+  @media (min-width: 0) and (max-width: 512px) {
+    footer .flex-container {
+      max-width: 340px !important;
+      justify-content: flex-start; } }
+  footer .flex-container div ul {
+    margin-bottom: 35px; }
+    footer .flex-container div ul li {
+      margin-bottom: 10px; }
