--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -1,7 +1,7 @@
 header {
     z-index:1;
     nav {
-        background-color: black;
+        background-color:$dark-blue;
         width: 100%;
         position: fixed;
         div.logo {
