--- a/scss/_hero.scss
+++ b/scss/_hero.scss
@@ -1,60 +1,73 @@
 .hero {
+    background-image: linear-gradient(rgba(29,28,81,0.6), rgba(29,28,81,0.6)), url("https://github.com/sofiarnunes/Halls-360Project/blob/main/img/background_Crava_%C3%A0_Halls.png?raw=true");
+    background-repeat:no-repeat;
+    background-size:cover;
+    z-index:0;
     .wrapper {
         height: 100vh;
         display: flex;
         align-items: center;
         flex-direction: column;
         justify-content: center;
+        margin: 0 auto;
         h3 {
             font-size: 30px;
             margin: 30px;
+            font-weight: 700;
+            color:white;
         }
-        ul {
-            font-size: 20px;
-            li {
-                display: flex;
-                align-items: center;
-                margin: 5px;
-                position:relative;
-                span {
-                    font-size: 100px;
-                    font-weight: 700;
-                    margin-right: 50px;
-                }
-            }
-            .square{
-                height:70px;
-                width:70px;
-                background-color:cornflowerblue;
-                transform:rotate(45deg);
-                position:absolute;
-                z-index:-1;
-                border-radius:10px;
-            }
-        }
-        form {
-            text-align: center;
-            label {
-                margin-bottom: 30px;
-                display: block;
-                font-size: 22px;
-            }
-            input {
-                height: 95px;
+        .rules-01 {
+            display:flex;
+            flex-direction:row;
+            align-items:center;
+            height:110px;
+            color:white;
+            .square {
+                height: 60px;
+                width: 60px;
+                background-color: $light-blue;
+                transform: rotate(45deg);
                 border-radius: 10px;
-                display: inline-block;
+                display:block;
             }
-            input#code {
-                width: 490px;
+            .number {
+                font-size: 100px;
+                font-weight: 700;
+                position: absolute;
                 text-align: center;
-                font-size: 60px;
-                font-family: $poppins;
+                transform: translateY(-20%) rotate(-45deg);
+                margin:auto auto;
             }
-            input.btn {
-                width: 110px;
-                font-family: $poppins;
-                font-size: 60px;
+            p {
+                width:618px;
+                margin:25px;
+                font-size:20px;
+                font-weight:600;
             }
+        }
+    }
+    form {
+        text-align: center;
+        label {
+            margin: 50px;
+            display: block;
+            font-size: 22px;
+            font-weight:600;
+            color:white;
+        }
+        input {
+            height: 95px;
+            border-radius: 10px;
+            margin-right:5px;
+        }
+        input#code {
+            width: 490px;
+            text-align: center;
+            font-size: 60px;
+        }
+        input.btn {
+            width: 110px;
+            font-size: 60px;
         }
     }
 }
