--- a/style/css/main.css
+++ b/style/css/main.css
@@ -1,212 +1,1 @@
-<<<<<<< HEAD
-html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video{margin:0;padding:0;border:0;font-size:100%;font:inherit;vertical-align:baseline}article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block}body{line-height:1}ol,ul{list-style:none}blockquote,q{quotes:none}blockquote:before,blockquote:after,q:before,q:after{content:'';content:none}table{border-collapse:collapse;border-spacing:0}*{box-sizing:border-box}a{text-decoration:none}html,body{position:relative;height:100%}body{font-family:'Azo Sans'}section{padding:0 2%}.wrapper{margin:0 auto;height:100%}header{z-index:1}header nav{background-color:black;width:100%;position:fixed}header nav div.logo{display:flex;align-items:center;justify-content:center}header nav div.logo img{height:10vh}.hero .wrapper{height:100vh;display:flex;align-items:center;flex-direction:column;justify-content:center}.hero .wrapper h3{font-size:30px;margin:30px}.hero .wrapper ul{font-size:20px}.hero .wrapper ul li{display:flex;align-items:center;margin:5px;position:relative}.hero .wrapper ul li span{font-size:100px;font-weight:700;margin-right:50px}.hero .wrapper ul .square{height:70px;width:70px;background-color:cornflowerblue;transform:rotate(45deg);position:absolute;z-index:-1;border-radius:10px}.hero .wrapper form{text-align:center}.hero .wrapper form label{margin-bottom:30px;display:block;font-size:22px}.hero .wrapper form input{height:95px;border-radius:10px;display:inline-block}.hero .wrapper form input#code{width:490px;text-align:center;font-size:60px;font-family:"Poppins",sans-serif}.hero .wrapper form input.btn{width:110px;font-family:"Poppins",sans-serif;font-size:60px}.premios{text-align:center;margin-bottom:100px}.premios .wrapper h2{font-size:25px;text-transform:uppercase;margin-bottom:10px}.premios .wrapper h3{font-size:20px;font-weight:550;text-transform:uppercase;margin-bottom:50px}.premios .wrapper h3 span{font-size:40px}.premios .wrapper .flex-container{display:flex;justify-content:space-around;flex-wrap:wrap}.premios .wrapper .flex-container img{width:250px;margin-top:20px}.rules{text-align:center;margin-bottom:100px}.rules .wrapper h3{font-size:25px;text-transform:uppercase;margin-bottom:30px}.rules .wrapper ul li{margin-bottom:10px}.rules .wrapper ul li span{vertical-align:middle;font-size:30px;font-weight:700}footer{height:50px;background-color:black;text-align:center}footer p{color:white;position:relative;top:50%;transform:translateY(-50%)}
-=======
-/* http://meyerweb.com/eric/tools/css/reset/ 
-   v2.0 | 20110126
-   License: none (public domain)
-*/
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed,
-figure, figcaption, footer, header, hgroup,
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  font-size: 100%;
-  font: inherit;
-  vertical-align: baseline; }
-
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section {
-  display: block; }
-
-body {
-  line-height: 1; }
-
-ol, ul {
-  list-style: none; }
-
-blockquote, q {
-  quotes: none; }
-
-blockquote:before, blockquote:after,
-q:before, q:after {
-  content: '';
-  content: none; }
-
-table {
-  border-collapse: collapse;
-  border-spacing: 0; }
-
-* {
-  box-sizing: border-box; }
-
-a {
-  text-decoration: none; }
-
-html, body {
-  position: relative;
-  height: 100%; }
-
-body {
-  font-family: 'Azo Sans'; }
-
-section {
-  padding: 0 2%; }
-
-.wrapper {
-  margin: 0 auto;
-  height: 100%; }
-
-header nav {
-  background-color: black;
-  width: 100%;
-  position: fixed; }
-  header nav div.logo {
-    display: flex;
-    align-items: center;
-    justify-content: center; }
-    header nav div.logo img {
-      height: 10vh; }
-
-.hero .wrapper form {
-  height: 100vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column; }
-  .hero .wrapper form label {
-    font-size: 30px;
-    font-weight: 600;
-    margin: 6px;
-    height: 25px; }
-  .hero .wrapper form input {
-    margin: 10px;
-    height: 25px; }
-
-.premios {
-  text-align: center;
-  margin-bottom: 100px; }
-  .premios .wrapper h2 {
-    font-size: 25px;
-    text-transform: uppercase;
-    margin-bottom: 10px; }
-  .premios .wrapper h3 {
-    font-size: 20px;
-    font-weight: 550;
-    text-transform: uppercase;
-    margin-bottom: 50px; }
-    .premios .wrapper h3 span {
-      font-size: 40px; }
-  .premios .wrapper .flex-container {
-    display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap; }
-    .premios .wrapper .flex-container img {
-      width: 250px;
-      margin-top: 20px; }
-
-.regras {
-  text-align: center;
-  margin-bottom: 100px; }
-  .regras .wrapper h3 {
-    font-size: 25px;
-    text-transform: uppercase;
-    margin-bottom: 30px; }
-  .regras .wrapper ul li {
-    margin-bottom: 10px; }
-    .regras .wrapper ul li span {
-      vertical-align: middle;
-      font-size: 30px;
-      font-weight: 700; }
-
-.about {
-  text-align: center;
-  width: 100%;
-  background-image: url("https://raw.githubusercontent.com/sofiarnunes/Halls-360Project/main/img/bg-home.jpg");
-  background-repeat: no-repeat;
-  background-size: cover;
-  height: 2869px; }
-  .about .wrapper {
-    max-width: 1280px; }
-    .about .wrapper h2 {
-      font-size: 110px;
-      font-weight: 700;
-      color: #ffffff;
-      margin-bottom: 22px;
-      line-height: 132px;
-      padding-top: 253px; }
-    .about .wrapper p {
-      font-size: 20px;
-      color: #ffffff;
-      margin-bottom: 100px;
-      width: 973px;
-      position: relative;
-      left: 50%;
-      transform: translateX(-50%);
-      line-height: 27.24px; }
-    .about .wrapper .flex-container {
-      margin-top: 180px;
-      display: flex;
-      justify-content: space-around;
-      align-items: center;
-      flex-wrap: wrap; }
-      .about .wrapper .flex-container .shape {
-        height: 450px;
-        width: 450px;
-        min-width: 450px;
-        overflow: hidden;
-        transform: rotate(45deg);
-        position: relative;
-        border-radius: 30px; }
-        .about .wrapper .flex-container .shape img {
-          transform: rotate(-45deg);
-          height: 1050px;
-          position: absolute;
-          bottom: -250px;
-          right: -30px; }
-      .about .wrapper .flex-container .info {
-        max-width: 430px; }
-        .about .wrapper .flex-container .info h3 {
-          font-size: 80px;
-          margin-bottom: 22px;
-          color: #ffffff;
-          line-height: 96px; }
-        .about .wrapper .flex-container .info p {
-          width: 426px;
-          font-size: 25px;
-          line-height: 30px; }
-      .about .wrapper .flex-container.frst {
-        margin-top: 200px; }
-    .about .wrapper .btn-default {
-      padding: 20px 100px;
-      background-color: red;
-      font-size: 25px;
-      font-weight: 600;
-      letter-spacing: 3px;
-      color: white;
-      border-radius: 20px;
-      background-color: #555555; }
-
-footer {
-  height: 50px;
-  background-color: black;
-  text-align: center;
-  position: relative;
-  bottom: -22px; }
-  footer p {
-    color: white;
-    position: relative;
-    top: 50%;
-    transform: translateY(-50%); }
->>>>>>> 039644237a2221a27bcb7a810f8c36b9ecdb6d23
+html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video{margin:0;padding:0;border:0;font-size:100%;font:inherit;vertical-align:baseline}article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block}body{line-height:1}ol,ul{list-style:none}blockquote,q{quotes:none}blockquote:before,blockquote:after,q:before,q:after{content:'';content:none}table{border-collapse:collapse;border-spacing:0}*{box-sizing:border-box}a{text-decoration:none}html,body{position:relative;height:100%}body{font-family:'Azo Sans'}section{padding:0 2%}.wrapper{margin:0 auto;height:100%}header{z-index:1}header nav{background-color:#1D1C51;width:100%;position:fixed}header nav div.logo{display:flex;align-items:center;justify-content:center}header nav div.logo img{height:10vh}.hero{background-image:linear-gradient(rgba(29,28,81,0.6), rgba(29,28,81,0.6)),url("https://github.com/sofiarnunes/Halls-360Project/blob/main/img/background_Crava_%C3%A0_Halls.png?raw=true");background-repeat:no-repeat;background-size:cover;z-index:0}.hero .wrapper{height:100vh;display:flex;align-items:center;flex-direction:column;justify-content:center;margin:0 auto}.hero .wrapper h3{font-size:30px;margin:30px;font-weight:700;color:white}.hero .wrapper .rules-01{display:flex;flex-direction:row;align-items:center;height:110px;color:white}.hero .wrapper .rules-01 .square{height:60px;width:60px;background-color:#4AACE4;transform:rotate(45deg);border-radius:10px;display:block}.hero .wrapper .rules-01 .number{font-size:100px;font-weight:700;position:absolute;text-align:center;transform:translateY(-20%) rotate(-45deg);margin:auto auto}.hero .wrapper .rules-01 p{width:618px;margin:25px;font-size:20px;font-weight:600}.hero form{text-align:center}.hero form label{margin:50px;display:block;font-size:22px;font-weight:600;color:white}.hero form input{height:95px;border-radius:10px;margin-right:5px}.hero form input#code{width:490px;text-align:center;font-size:60px}.hero form input.btn{width:110px;font-size:60px}.premios{text-align:center;margin-bottom:100px}.premios .wrapper h2{font-size:25px;text-transform:uppercase;margin-bottom:10px}.premios .wrapper h3{font-size:20px;font-weight:550;text-transform:uppercase;margin-bottom:50px}.premios .wrapper h3 span{font-size:40px}.premios .wrapper .flex-container{display:flex;justify-content:space-around;flex-wrap:wrap}.premios .wrapper .flex-container img{width:250px;margin-top:20px}.about{text-align:center;width:100%;background-image:url("https://raw.githubusercontent.com/sofiarnunes/Halls-360Project/main/img/bg-home.jpg");background-repeat:no-repeat;background-size:cover;height:2869px}.about .wrapper{max-width:1280px}.about .wrapper h2{font-size:110px;font-weight:700;color:#fff;margin-bottom:22px;line-height:132px;padding-top:253px}.about .wrapper p{font-size:20px;color:#fff;margin-bottom:100px;width:973px;position:relative;left:50%;transform:translateX(-50%);line-height:27.24px}.about .wrapper .flex-container{margin-top:180px;display:flex;justify-content:space-around;align-items:center;flex-wrap:wrap}.about .wrapper .flex-container .shape{height:450px;width:450px;min-width:450px;overflow:hidden;transform:rotate(45deg);position:relative;border-radius:30px}.about .wrapper .flex-container .shape img{transform:rotate(-45deg);height:1050px;position:absolute;bottom:-250px;right:-30px}.about .wrapper .flex-container .info{max-width:430px}.about .wrapper .flex-container .info h3{font-size:80px;margin-bottom:22px;color:#fff;line-height:96px}.about .wrapper .flex-container .info p{width:426px;font-size:25px;line-height:30px}.about .wrapper .flex-container.frst{margin-top:200px}.about .wrapper .btn-default{padding:20px 100px;background-color:red;font-size:25px;font-weight:600;letter-spacing:3px;color:white;border-radius:20px;background-color:#555555}footer{height:50px;background-color:black;text-align:center;position:relative;bottom:-22px}footer p{color:white;position:relative;top:50%;transform:translateY(-50%)}
