--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -8,8 +8,9 @@ header {
             display: flex;
             align-items: center;
             justify-content: center;
+            height:144px;
             img {
-                height: 10vh;
+                height: 80px;
             }
         }
     }
