--- a/scss/_hero.scss
+++ b/scss/_hero.scss
@@ -51,6 +51,7 @@
                     font-weight: 700;
                     margin: 30px;
                     text-align:center;
+                    height:32px;
                 }
             }
         }
@@ -70,7 +71,7 @@
             height: 54px;
             width: 174px;
             border-radius: 15px;
-            margin: 15px;
+            margin: 10px;
         }
         input#code {
             text-align: center;
