--- a/scss/_hero.scss
+++ b/scss/_hero.scss
@@ -4,13 +4,18 @@
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
+    width:100%;
+    height:100vh;
     .wrapper {
-        height: 100vh;
         display: flex;
         align-items: center;
         flex-direction: column;
         justify-content: center;
         margin: 0 auto;
+        max-width: 1280px;
+        @include mq(0,512px){
+            max-width: 340px !important;
+        }
         div.rules {
             display: flex;
             flex-direction: row;
@@ -25,6 +30,9 @@
                 color: white;
                 margin: 30px;
                 flex: 1;
+                @include mq(0,512px){
+                    max-width:100%;
+                }
                 .square {
                     height: 45px;
                     width: 45px;
@@ -40,9 +48,9 @@
                         h1 {
                             font-size: 26px;
                             font-weight: 700;
-                            text-align:center;
-                            line-height:45px;
-                            margin:0;
+                            text-align: center;
+                            line-height: 45px;
+                            margin: 0;
                         }
                     }
                 }
@@ -50,8 +58,8 @@
                     font-size: 16px;
                     font-weight: 700;
                     margin: 30px;
-                    text-align:center;
-                    height:32px;
+                    text-align: center;
+                    height: 32px;
                 }
             }
         }
