--- a/scss/_hero.scss
+++ b/scss/_hero.scss
@@ -84,7 +84,7 @@
         input#code {
             text-align: center;
             font-size: 25px;
-            weight: 400;
+            font-weight: 400;
         }
         input.btn {
             color: white;
