--- a/scss/_hero.scss
+++ b/scss/_hero.scss
@@ -4,8 +4,13 @@
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    width:100%;
-    height:100vh;
+    width: 100%;
+    height: 100vh;
+    @include mq(0, 512px) {
+        width: 100%;
+        background-color:#04022F;
+        background-image:none;
+    }
     .wrapper {
         display: flex;
         align-items: center;
@@ -13,12 +18,19 @@
         justify-content: center;
         margin: 0 auto;
         max-width: 1280px;
+        @include mq(0, 512px) {
+            height:100%;
+        }
         div.rules {
             display: flex;
             flex-direction: row;
             align-items: center;
             justify-content: center;
             margin-top: 20%;
+            @include mq(0, 512px) {
+                flex-direction: column;
+                margin-top:30%;
+            }
             .rules-01 {
                 display: flex;
                 flex-direction: column;
@@ -27,8 +39,10 @@
                 color: white;
                 margin: 30px;
                 flex: 1;
-                @include mq(0,512px){
-                    max-width:100%;
+                flex-wrap: wrap;
+                height:100px;
+                @include mq(0, 512px) {
+                    margin: 0;
                 }
                 .square {
                     height: 45px;
@@ -48,6 +62,10 @@
                             text-align: center;
                             line-height: 45px;
                             margin: 0;
+                            @include mq(0, 512px) {
+                                font-size: 36px;
+                                font-weight:700;
+                            }
                         }
                     }
                 }
@@ -57,6 +75,12 @@
                     margin: 30px;
                     text-align: center;
                     height: 32px;
+                    @include mq(0, 512px) {
+                        font-size: 14px;
+                        margin:20px;
+                        font-weight:700;
+                        height:14px;
+                    }
                 }
             }
         }
@@ -71,22 +95,39 @@
             font-weight: 400;
             color: white;
             margin: 27px;
+            @include mq(0, 512px) {
+                font-size: 14px;
+                margin:5px;
+                margin-top:10px;
+            }
         }
         input {
             height: 54px;
             width: 174px;
             border-radius: 15px;
             margin: 10px;
+            @include mq(0, 512px) {
+                height:49px;
+                width:200px;
+                margin:5px;
+            }
         }
         input#code {
             text-align: center;
             font-size: 25px;
             font-weight: 400;
+            @include mq(0, 512px) {
+                font-size: 14px;
+            }
         }
         input.btn {
             color: white;
             background: #ab2a4e;
             font-size: 16px;
+            @include mq(0, 512px) {
+                font-size: 14px;
+                margin-bottom:5px;
+            }
         }
     }
 }
