--- a/scss/_gifts.scss
+++ b/scss/_gifts.scss
@@ -1,28 +1,77 @@
-.premios{
+.gifts{
     text-align: center;
-    margin-bottom: 100px;
+    padding-bottom: 70px;
+    padding-top: 70px;
+    background-color: $darkest-blue;
+    color: $white;
+    @include mq(0,512px){
+        width: 100%;
+        overflow: hidden;
+    }
     .wrapper{
+        @include mq(0,512px){
+            max-width: 340px !important;
+        }
         h2{
-            font-size: 25px;
-            text-transform: uppercase;
+            font-size: 60px;
             margin-bottom: 10px;
+            @include mq(0,512px){
+                font-size: 29px;
+            }
         }
         h3{
-            font-size: 20px;
-            font-weight: 550;
-            text-transform: uppercase;
-            margin-bottom: 50px;
-            span{
-                font-size: 40px;
+            font-size: 60px;
+            margin-bottom: 100px;
+            @include mq(0,512px){
+                font-size: 29px;
+                margin-bottom: 50px;
             }
         }
         .flex-container{
             display: flex;
             justify-content: space-around;
             flex-wrap: wrap;
-            img{
-                width: 250px;
-                margin-top: 20px;
+            margin-bottom: 100px;
+            @include mq(0,512px){
+                width: 340px !important;
+                margin-bottom: 30px;
+            }
+            .square{
+                height: 200px;
+                width: 200px;
+                background-color: #848484;
+                transform: rotate(45deg);
+                border-radius: 30px;
+                @include mq(0,512px){
+                    height: 100px;
+                    width: 100px;
+                    border-radius: 20px;
+                    margin: 40px 20px;
+                }
+                img{
+                    width: 200px;
+                    margin-top: 20px;
+                    transform: rotate(-45deg);
+                    position: absolute;
+                    right: 25px;
+                    top: -60px;
+                    @include mq(0,512px){
+                        width: 100px;
+                        right: 15px;
+                        top: -40px;
+                    }
+                }
+            }
+        }
+        p{
+            max-width: 500px;
+            font-size: 20px;
+            position: relative;
+            left: 50%;
+            transform: translateX(-50%);
+            @include mq(0,512px){
+                max-width: 250px !important;
+                font-size: 13px;
             }
         }
     }
