--- a/scss/_hero.scss
+++ b/scss/_hero.scss
@@ -7,9 +7,8 @@
     width: 100%;
     height: 100vh;
     @include mq(0, 512px) {
+        background-image: url("https://raw.githubusercontent.com/sofiarnunes/Halls-360Project/main/img/Imagem_Background_Mobile.png");
         width: 100%;
-        background-color:$darkest-blue;
-        background-image:none;
         overflow: hidden;
     }
     .wrapper {
