--- a/style/css/main.css
+++ b/style/css/main.css
@@ -207,6 +207,7 @@ header {
           margin-bottom: 5px; } }
 
 .gifts {
+  display: none;
   text-align: center;
   padding-bottom: 70px;
   padding-top: 70px;
