--- a/style/css/main.css
+++ b/style/css/main.css
@@ -72,20 +72,6 @@ section {
   align-items: center;
   flex-wrap: wrap; }
 
-header {
-  z-index: 1; }
-  header nav {
-    background-color: #1D1C51;
-    width: 100%;
-    position: fixed; }
-    header nav div.logo {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      height: 144px; }
-      header nav div.logo img {
-        height: 80px; }
-
 .hero {
   background-image: linear-gradient(rgba(29, 28, 81, 0.7), rgba(29, 28, 81, 0.7)), url("https://github.com/sofiarnunes/Halls-360Project/blob/main/img/Background_update.png?raw=true");
   background-repeat: no-repeat;
@@ -104,7 +90,7 @@ header {
     flex-direction: column;
     justify-content: center;
     margin: 0 auto;
-    max-width: 1280px; }
+    max-width: 100%; }
     @media (min-width: 0) and (max-width: 512px) {
       .hero .wrapper {
         max-width: 340px !important; } }
@@ -206,85 +192,65 @@ header {
           font-size: 14px;
           margin-bottom: 5px; } }
 
-.gifts {
-  display: none;
-  text-align: center;
-  padding-bottom: 70px;
-  padding-top: 70px;
-  background-color: #04022F;
-  color: #ffffff; }
-  @media (min-width: 0) and (max-width: 512px) {
-    .gifts {
+.prize {
+  background: linear-gradient(180deg, #151448 25%, #3b8ccc 99%);
+  height: 100vh; }
+  .prize .wrapper {
+    max-width: 1100px;
+    height: 100vh; }
+    .prize .wrapper .flex-container {
+      padding-top: 70px;
+      width: 100%; }
+      .prize .wrapper .flex-container .prizes {
+        width: 420px;
+        height: 420px;
+        position: relative;
+        bottom: 15px; }
+        .prize .wrapper .flex-container .prizes img {
+          width: 170px;
+          position: absolute; }
+          .prize .wrapper .flex-container .prizes img.top {
+            top: 0;
+            left: 50%;
+            transform: translateX(-50%); }
+          .prize .wrapper .flex-container .prizes img.right {
+            right: 0;
+            top: 50%;
+            transform: translateY(-50%); }
+          .prize .wrapper .flex-container .prizes img.bottom {
+            bottom: 0;
+            left: 50%;
+            transform: translateX(-50%); }
+          .prize .wrapper .flex-container .prizes img.left {
+            left: 0;
+            top: 50%;
+            transform: translateY(-50%); }
+      .prize .wrapper .flex-container div h3 {
+        font-size: 80px;
+        font-weight: 700;
+        color: #ffffff; }
+      .prize .wrapper .flex-container .professional img {
+        width: 430px; }
+    .prize .wrapper .flex-container {
       width: 100%;
-      overflow: hidden;
-      border-top: red 1px solid; } }
-  @media (min-width: 0) and (max-width: 512px) {
-    .gifts .wrapper {
-      max-width: 340px !important; } }
-  .gifts .wrapper h2 {
-    font-size: 60px;
-    margin-bottom: 10px; }
-    @media (min-width: 0) and (max-width: 512px) {
-      .gifts .wrapper h2 {
-        font-size: 29px; } }
-  .gifts .wrapper h3 {
-    font-size: 60px;
-    margin-bottom: 100px; }
-    @media (min-width: 0) and (max-width: 512px) {
-      .gifts .wrapper h3 {
-        font-size: 29px;
-        margin-bottom: 50px; } }
-  .gifts .wrapper .flex-container {
-    display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
-    margin-bottom: 100px; }
-    @media (min-width: 0) and (max-width: 512px) {
-      .gifts .wrapper .flex-container {
-        width: 340px !important;
-        margin-bottom: 30px; } }
-    .gifts .wrapper .flex-container .square {
-      height: 200px;
-      width: 200px;
-      background-color: #848484;
-      transform: rotate(45deg);
-      border-radius: 30px; }
-      @media (min-width: 0) and (max-width: 512px) {
-        .gifts .wrapper .flex-container .square {
-          height: 100px;
-          width: 100px;
-          border-radius: 20px;
-          margin: 40px 20px; } }
-      .gifts .wrapper .flex-container .square img {
-        width: 200px;
-        margin-top: 20px;
-        transform: rotate(-45deg);
-        position: absolute;
-        right: 25px;
-        top: -60px; }
-        @media (min-width: 0) and (max-width: 512px) {
-          .gifts .wrapper .flex-container .square img {
-            width: 100px;
-            right: 15px;
-            top: -40px; } }
-  .gifts .wrapper p {
-    max-width: 500px;
-    font-size: 20px;
-    position: relative;
-    left: 50%;
-    transform: translateX(-50%); }
-    @media (min-width: 0) and (max-width: 512px) {
-      .gifts .wrapper p {
-        max-width: 250px !important;
-        font-size: 13px; } }
+      text-align: center;
+      justify-content: space-between; }
+      .prize .wrapper .flex-container .text-1, .prize .wrapper .flex-container .text-2 {
+        width: 420px;
+        margin-top: -70px; }
+        .prize .wrapper .flex-container .text-1 p, .prize .wrapper .flex-container .text-2 p {
+          font-size: 20px;
+          font-weight: 700;
+          color: #ffffff; }
+      .prize .wrapper .flex-container .text-2 {
+        margin-top: -50px; }
 
 .about {
-  text-align: center;
   width: 100%;
   background-image: url("https://raw.githubusercontent.com/sofiarnunes/Halls-360Project/main/img/bg-home.jpg");
   background-repeat: no-repeat;
   background-size: cover;
-  height: 2960px; }
+  height: 2350px; }
   @media (min-width: 0) and (max-width: 512px) {
     .about {
       width: 100%;
@@ -297,12 +263,13 @@ header {
       .about .wrapper {
         max-width: 340px !important; } }
     .about .wrapper h2 {
-      font-size: 110px;
+      text-align: center;
+      font-size: 90px;
       font-weight: 700;
       color: #ffffff;
-      margin-bottom: 22px;
-      line-height: 132px;
-      padding-top: 253px; }
+      margin-bottom: 18px;
+      line-height: 110px;
+      padding-top: 50px; }
       @media (min-width: 0) and (max-width: 512px) {
         .about .wrapper h2 {
           font-size: 45px;
@@ -313,20 +280,21 @@ header {
           position: relative;
           left: 50%;
           transform: translateX(-50%); } }
-    .about .wrapper p {
-      font-size: 20px;
+    .about .wrapper .sub {
+      text-align: center;
+      font-size: 18px;
       color: #ffffff;
-      margin-bottom: 100px;
+      margin-bottom: 70px;
       width: 973px;
       position: relative;
       left: 50%;
       transform: translateX(-50%);
-      line-height: 27.24px; }
+      line-height: 23.24px; }
       @media (min-width: 0) and (max-width: 512px) {
-        .about .wrapper p {
+        .about .wrapper .sub {
           display: none; } }
     .about .wrapper .flex-container {
-      margin-top: 180px;
+      margin-top: 150px;
       display: flex;
       justify-content: space-around;
       align-items: center;
@@ -335,9 +303,10 @@ header {
         .about .wrapper .flex-container {
           margin-top: 60px; } }
       .about .wrapper .flex-container .shape {
-        height: 450px;
-        width: 450px;
-        min-width: 450px;
+        margin-left: 80px;
+        height: 400px;
+        width: 400px;
+        min-width: 400px;
         overflow: hidden;
         transform: rotate(45deg);
         position: relative;
@@ -351,7 +320,7 @@ header {
             margin-bottom: 80px; } }
         .about .wrapper .flex-container .shape img {
           transform: rotate(-45deg);
-          height: 1050px;
+          height: 950px;
           position: absolute;
           bottom: -250px;
           right: -30px; }
@@ -362,11 +331,13 @@ header {
               right: -80px; } }
       .about .wrapper .flex-container .info {
         max-width: 430px; }
+        .about .wrapper .flex-container .info.right {
+          text-align: right; }
         .about .wrapper .flex-container .info h3 {
-          font-size: 80px;
-          margin-bottom: 22px;
+          font-size: 60px;
+          margin-bottom: 18px;
           color: #ffffff;
-          line-height: 96px; }
+          line-height: 80px; }
           @media (min-width: 0) and (max-width: 512px) {
             .about .wrapper .flex-container .info h3 {
               font-size: 40px;
@@ -374,8 +345,9 @@ header {
               line-height: 0px; } }
         .about .wrapper .flex-container .info p {
           width: 426px;
-          font-size: 25px;
-          line-height: 30px; }
+          font-size: 20px;
+          line-height: 30px;
+          color: #ffffff; }
           @media (min-width: 0) and (max-width: 512px) {
             .about .wrapper .flex-container .info p {
               font-size: 14px;
@@ -384,13 +356,19 @@ header {
               width: 250px;
               display: block; } }
       .about .wrapper .flex-container.frst {
-        margin-top: 200px; }
+        margin-top: 150px; }
         @media (min-width: 0) and (max-width: 512px) {
           .about .wrapper .flex-container.frst {
             margin-top: 90px; } }
       .about .wrapper .flex-container.rev {
-        flex-direction: row-reverse; }
+        flex-direction: row-reverse;
+        margin-right: 70px;
+        margin-left: 0; }
     .about .wrapper .btn-default {
+      position: absolute;
+      left: 50%;
+      transform: translateX(-50%);
+      text-align: center;
       padding: 25px 135px;
       display: inline-block;
       font-size: 30px;
@@ -398,7 +376,7 @@ header {
       color: #1D1C51;
       background-color: #ffffff;
       border-radius: 30px;
-      margin-top: 220px; }
+      margin-top: 190px; }
       @media (min-width: 0) and (max-width: 512px) {
         .about .wrapper .btn-default {
           padding: 20px 50px;
@@ -408,7 +386,7 @@ header {
           margin-top: 40px; } }
 
 footer {
-  height: 100px;
+  height: 105px;
   background-color: #4AACE4;
   color: #ffffff;
   position: relative;
@@ -418,27 +396,29 @@ footer {
     footer {
       height: 200px;
       width: 100%; } }
-  @media (min-width: 0) and (max-width: 512px) {
-    footer .flex-container {
-      max-width: 340px !important;
-      justify-content: flex-start; } }
-  footer .flex-container div ul li {
-    font-size: 13px;
-    margin: 0 15px;
-    text-transform: uppercase;
-    color: #ffffff;
-    font-weight: 600; }
-    footer .flex-container div ul li img {
-      height: 100px; }
-  footer .flex-container div {
-    vertical-align: middle; }
-    footer .flex-container div i {
-      font-size: 35px;
+  footer .flex-container {
+    margin-top: 2px; }
+    @media (min-width: 0) and (max-width: 512px) {
+      footer .flex-container {
+        max-width: 340px !important;
+        justify-content: flex-start; } }
+    footer .flex-container div ul li {
+      font-size: 13px;
       margin: 0 15px;
-      color: #ffffff; }
-      footer .flex-container div i[class="fab fa-instagram"] {
-        font-size: 30px;
-        color: #4AACE4;
-        background-color: #ffffff;
-        padding: 3px 5px;
-        border-radius: 100%; }
+      text-transform: uppercase;
+      color: #ffffff;
+      font-weight: 600; }
+      footer .flex-container div ul li img {
+        height: 100px; }
+    footer .flex-container div {
+      vertical-align: middle; }
+      footer .flex-container div i {
+        font-size: 35px;
+        margin: 0 15px;
+        color: #ffffff; }
+        footer .flex-container div i[class="fab fa-instagram"] {
+          font-size: 30px;
+          color: #4AACE4;
+          background-color: #ffffff;
+          padding: 3px 5px;
+          border-radius: 100%; }
