--- a/scss/_about.scss
+++ b/scss/_about.scss
@@ -1,10 +1,9 @@
 .about{
-    text-align: center;
     width: 100%;
     background-image: url('https://raw.githubusercontent.com/sofiarnunes/Halls-360Project/main/img/bg-home.jpg');
     background-repeat: no-repeat;
     background-size: cover;
-    height: 2960px;
+    height: 2350px;
     @include mq(0,512px){
         width: 100%;
         overflow: hidden;
@@ -17,12 +16,13 @@
             max-width: 340px !important;
         }
         h2{
-            font-size: 110px;
+            text-align: center;
+            font-size: 90px;
             font-weight: 700;
             color: $white;
-            margin-bottom: 22px;
-            line-height: 132px;
-            padding-top: 253px;
+            margin-bottom: 18px;
+            line-height: 110px;
+            padding-top: 50px;
             @include mq(0,512px){
                 font-size: 45px;
                 margin-bottom: 30px;
@@ -34,22 +34,23 @@
                 transform: translateX(-50%);
             }
         }
-        p{
-            font-size: 20px;
+        .sub{
+            text-align: center;
+            font-size: 18px;
             color: $white;
-            margin-bottom: 100px;
+            margin-bottom: 70px;
             width: 973px;
             position: relative;
             left: 50%;
             transform: translateX(-50%);
             line-height: 
-            27.24px;
+            23.24px;
             @include mq(0,512px){
                 display: none;
             }
         }
         .flex-container{
-            margin-top: 180px;
+            margin-top: 150px;
             display: flex;
             justify-content: space-around;
             align-items: center;
@@ -59,9 +60,10 @@
 
             }
             .shape{
-                height: 450px;
-                width: 450px;
-                min-width: 450px;
+                margin-left: 80px;
+                height: 400px;
+                width: 400px;
+                min-width: 400px;
                 overflow: hidden;
                 transform: rotate(45deg);
                 position: relative;
@@ -75,7 +77,7 @@
                 }
                 img{
                     transform: rotate(-45deg);
-                    height: 1050px;
+                    height: 950px;
                     position: absolute;
                     bottom: -250px;
                     right:-30px;
@@ -88,11 +90,14 @@
             }
             .info{
                 max-width: 430px;
+                &.right{
+                    text-align: right;
+                }
                 h3{
-                    font-size: 80px;
-                    margin-bottom: 22px;
+                    font-size: 60px;
+                    margin-bottom: 18px;
                     color: $white;
-                    line-height: 96px;
+                    line-height: 80px;
                     @include mq(0,512px){
                         font-size: 40px;
                         margin-bottom: 25px;
@@ -101,8 +106,9 @@
                 }
                 p{
                     width: 426px;
-                    font-size: 25px;
+                    font-size: 20px;
                     line-height: 30px;
+                    color: $white;
                     @include mq(0,512px){
                         font-size: 14px;
                         margin-bottom: 50px;
@@ -113,23 +119,29 @@
                 }
             }
             &.frst{
-                margin-top: 200px;
+                margin-top: 150px;
                 @include mq(0,512px){
                     margin-top: 90px;
                 }
             }
             &.rev{
                 flex-direction: row-reverse;
+                margin-right: 70px;
+                margin-left: 0;
             }
         }
         .btn-default{
+            position: absolute;
+            left: 50%;
+            transform: translateX(-50%);
+            text-align: center;
             padding: 25px 135px;
             display: inline-block;
             font-size: 30px;
             letter-spacing: 3px;
             color: $dark-blue;
             background-color: $white;border-radius: 30px;
-            margin-top: 220px;
+            margin-top: 190px;
             @include mq(0,512px){
                 padding: 20px 50px;
                 font-size: 25px;
