--- a/scss/_hero.scss
+++ b/scss/_hero.scss
@@ -17,7 +17,7 @@
         flex-direction: column;
         justify-content: center;
         margin: 0 auto;
-        max-width: 1280px;
+        max-width: 100%;
         @include mq(0, 512px) {
             max-width: 340px !important;
         }
